reg with ransac and icp finished

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,10 @@ set(Open3D_DIR /home/cheng/sources/open3ds/install/lib/cmake/Open3D)
 # set(Open3D_DIR /home/cheng/sources/open3ds/install/)
 find_package(Open3D REQUIRED)
 
+include_directories(
+        ${PROJECT_SOURCE_DIR}/include/
+)
+
 if (Open3D_FOUND)
     message(STATUS "Found Open3D ${Open3D_VERSION}")
     message(STATUS "Open3D installed to: ${Open3D_LIBRARY_DIRS}")
@@ -14,11 +18,11 @@ if (Open3D_FOUND)
     link_directories(${Open3D_LIBRARY_DIRS})
     include_directories(${Open3D_INCLUDE_DIRS})
 
-    add_executable(3DPCREG main.cpp pc_reg.cpp utils.cpp utils.h)
+    add_executable(${PROJECT_NAME} main.cpp src/Registration_mix.cpp src/utils.cpp include/utils.h src/PointCloudReader.cpp include/PointCloudReader.h src/FeatureCompute.cpp include/FeatureCompute.h src/SolveCorrespondenceAndRigidTransformation.cpp include/SolveCorrespondenceAndRigidTransformation.h src/Registration.cpp include/Registration.h)
  
-    target_link_libraries(3DPCREG ${Open3D_LIBRARIES})
+    target_link_libraries(${PROJECT_NAME} ${Open3D_LIBRARIES})
  
-    target_include_directories(3DPCREG PUBLIC ${Open3D_INCLUDE_DIRS})
+    target_include_directories(${PROJECT_NAME} PUBLIC ${Open3D_INCLUDE_DIRS})
 
     # target_link_libraries( ${Open3D_LIBRARIES})
 
